--- a/backend/majors/MAT.yaml
+++ b/backend/majors/MAT.yaml
@@ -16,109 +16,98 @@ contacts:
 req_list:
 - name: Prerequisites
   max_counted: 1
-  min_needed: 2
-  explanation: |-
-    Generally, either 215-217 or 216-218 or 203-204-215 are strongly recommended for admission to the department. Prospective mathematics majors should consult the department early and plan a program that includes as much of the 215-217 or 216-218 sequence as possible. Most majors begin taking courses at the 300-level by the second semester of the sophomore year, in preparation for their junior independent work.
-
-    Some of our successful majors became interested in mathematics as a major after taking 103 or 104. Such students should consult with the Junior Advisor or the Associate Departmental Representative as soon as possible.
+  min_needed: 1
+  explanation: Generally, prospective majors with a very strong 
+    background in calculus are strongly recommended to start in 215, 
+    followed by 217 and 300. Prospective majors with extensive prior 
+    experience with calculus and rigorous proofs can start in 216, 
+    followed by 218. Students with an interest in rigorous proofs may 
+    start in 210 or 214 and then continue to the 215-217-300 sequence.
   req_list:
   - name:
-    max_counted: 0.5
-    min_needed: 1
-    explanation:
-    course_list:
-    - MAT 201
-    - MAT 203
-  - name:
-    max_counted: 0.5
-    min_needed: 1
-    explanation:
-    course_list:
-    - MAT 202
-    - MAT 204
-  - name:
     max_counted: 1
-    min_needed: 1
-    explanation:
+    min_needed: 2
     course_list:
-    - MAT 214
     - MAT 215
-    - MAT 216
+    - MAT 217
   - name:
     max_counted: 1
-    min_needed: 1
-    explanation:
+    min_needed: 2
     course_list:
-    - MAT 217
+    - MAT 216
     - MAT 218
-- name: Departmental Courses
+- name: Real Analysis
   max_counted: 1
-  min_needed: ALL
-  explanation: Mathematics majors are required to take at least eight departmental
-    courses in mathematics at the 300- and 400-level or higher. Of those eight, students
-    must complete four core requirements.
-  req_list:
-  - name: Real Analysis
-    max_counted: 1
-    min_needed: 1
-    explanation: One course in real analysis (from the 320s or 420s or 200 or 385
-      or 520)
-    course_list:
-    - MAT 32*
-    - MAT 42*
-    - MAT 200
-    - MAT 385
-    - MAT 520
-  - name: Complex Analysis
-    max_counted: 1
-    min_needed: 1
-    explanation: One course in complex analysis (from the 330s)
-    course_list:
-    - MAT 33*
-  - name: Algebra
-    max_counted: 1
-    min_needed: 1
-    explanation: One course in algebra (from the 340s or 440s)
-    course_list:
-    - MAT 34*
-    - MAT 44*
-  - name: Geometry, Topology, or Discrete Math
-    max_counted: 1
-    min_needed: 1
-    explanation: one course in geometry or topology (from the 350s or 450s or 360s
-      or 460s, or alternatively, one course in discrete mathematics from the 370s
-      or 470s)
-    course_list:
-    - MAT 35*
-    - MAT 45*
-    - MAT 36*
-    - MAT 46*
-    - MAT 37*
-    - MAT 47*
-  - name: Electives
-    max_counted: 1
-    min_needed: 4
-    explanation: An additional four courses at the 300 level or higher. Up to three
-      of these may be cognate courses outside the Mathematics Department, with permission
-      from the junior or senior advisors or director of undergraduate studies. (Courses
-      from other departments that are cross-listed with MAT do not need permission
-      and do not count toward the total of three allowed cognates.)
-    course_list:
-    - MAT 3*
-    - MAT 4*
-    - MAT 5*
+  min_needed: 1
+  explanation: One course in real analysis (e.g., 300 or 320 or 325 or 
+    425 or 385).
+  course_list:
+  - MAT 200
+  - MAT 300
+  - MAT 320
+  - MAT 325
+  - MAT 425
+  - MAT 385
+  - MAT 520
+  - MAT 32*
+  - MAT 42*
+- name: Complex Analysis
+  max_counted: 1
+  min_needed: 1
+  explanation: One course in complex analysis (e.g., 330 or 335).
+  course_list:
+  - MAT 330
+  - MAT 335
+  - MAT 33*
+- name: Algebra
+  max_counted: 1
+  min_needed: 1
+  explanation: One course in algebra (e.g., 340 or 345)
+  course_list:
+  - MAT 340
+  - MAT 345
+  - MAT 440
+  - MAT 445
+  - MAT 44*
+- name: Geometry, Topology, or Discrete Math
+  max_counted: 1
+  min_needed: 1
+  explanation: One course in geometry or topology (e.g., 355 or 365 or 
+    560).
+  course_list:
+  - MAT 355
+  - MAT 365
+  - MAT 560
+  - MAT 35*
+  - MAT 45*
+  - MAT 36*
+  - MAT 46*
+  - MAT 37*
+  - MAT 47*
+- name: Electives
+  max_counted: 1
+  min_needed: 4
+  explanation: An additional four courses at the 300 level or higher. Up to three
+    of these may be cognate courses outside the Mathematics Department, with permission
+    from the junior or senior advisors or director of undergraduate studies. (Courses
+    from other departments that are cross-listed with MAT do not need permission
+    and do not count toward the total of three allowed cognates.)
+  course_list:
+  - MAT 3*
+  - MAT 4*
+  - MAT 5*
 - name: Junior Independent Work
-  max_counted:
-  min_needed:
+  max_counted: 1
+  min_needed: 1
   explanation: |-
-    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so TigerPath does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
 
-    All mathematics majors are expected to take a junior seminar during at least one semester of their junior year. In the other semester they can participate in a second junior seminar, or they can write a junior paper instead.
-  no_req:
+    The junior year independent work generally consists of participating actively in a junior seminar in both the fall and spring semesters. Alternatively, a student may opt to replace one junior seminar with supervised reading in a special subject and then writing a paper based on that reading.
 - name: Senior Thesis
-  min_needed:
+  max_counted: 1
+  min_needed: 1
   explanation: |-
-    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so TigerPath does not check it.</i>
+    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
 
     Senior theses are expected and tend to be more in-depth, more original in exposition/content, and more substantial than junior papers. However, there are no formal length requirements. Some of the best senior theses in mathematics over the years have been under 10 pages, while others have been over 100 pages, although about 20-40 pages when single-spaced seems typical. Senior theses are evaluated on the same basic criteria as junior papers, but naturally more originality and imagination in the exposition and content are expected in senior theses.
 
@@ -127,5 +116,3 @@ req_list:
     The primary adviser for the senior thesis can be a university faculty member outside the mathematics department (which is allowed, supported, and indeed occurs frequently). In this case, the second reader must be arranged within the mathematics department. (This is to help ensure uniformity in the evaluation process.)
 
     Senior thesis grades, together with grades in mathematics courses, are also taken into account when determining departmental honors.
-  max_counted:
-  no_req:
