--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "compass",
-  "version": "0.99",
+  "version": "1.1",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000 --turbo",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,52 +12,52 @@
   "dependencies": {
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@mui/icons-material": "^5.15.0",
-    "@mui/joy": "^5.0.0-beta.18",
-    "@mui/material": "^5.15.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/joy": "^5.0.0-beta.28",
+    "@mui/material": "^5.15.10",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/react": "18.2.45",
-    "@types/react-dom": "^18.2.17",
-    "clsx": "^2.0.0",
-    "eslint-config-next": "14.0.4",
+    "@types/react": "18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "clsx": "^2.1.0",
+    "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "geist": "^1.2.0",
-    "next": "^14.0.4",
+    "eslint-plugin-prettier": "^5.1.3",
+    "geist": "^1.2.2",
+    "next": "^14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-window": "^1.8.10",
-    "sass": "^1.69.5",
+    "sass": "^1.71.0",
     "typescript": "5.3.3",
     "typescript-lru-cache": "^2.0.0",
     "webpack-bundle-analyzer": "^4.10.1",
-    "zustand": "^4.4.7"
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@dnd-kit/core": "^6.1.0",
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.0.2",
-    "autoprefixer": "^10.4.16",
-    "classnames": "^2.3.2",
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "@vercel/analytics": "^1.2.0",
+    "@vercel/speed-insights": "^1.0.10",
+    "autoprefixer": "^10.4.17",
+    "classnames": "^2.5.1",
     "color-hash": "^2.0.2",
-    "daisyui": "^4.4.20",
+    "daisyui": "^4.7.2",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
     "next-pwa": "^5.6.0",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.35",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.3.0",
-    "sharp": "^0.33.0",
-    "tailwindcss": "^3.3.6",
-    "webpack": "^5.89.0"
+    "sharp": "^0.33.2",
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.90.2"
   },
   "license": "MIT"
 }
