--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "sass": "^1.69.5",
     "typescript": "5.3.3",
     "typescript-lru-cache": "^2.0.0",
+    "vercel": "^32.3.0",
     "webpack-bundle-analyzer": "^4.10.1",
     "zustand": "^4.4.7"
   },
