--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.1",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev -p 3000 --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -42,7 +42,7 @@
     "@types/node": "^20.11.19",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
-    "@vercel/analytics": "^1.2.0",
+    "@vercel/analytics": "^1.2.1",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.17",
     "classnames": "^2.5.1",
