--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -6,7 +6,9 @@
   },
   "settings": {
     "import/resolver": {
-      "typescript": {}
+      "typescript": {
+        "project": "frontend/tsconfig.json"
+      }
     },
     "react": {
       "version": "detect"
