--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "compass-backend"
-version = "0.8"
+version = "1.1"
 description = "Dependency manager for the Compass backend"
 authors = ["TigerApps"]
 license = "MIT"
 # homepage = "https://pucompass.com"
-repository = "https://github.com/cos333project/compass"
+repository = "https://github.com/ggchiriac/compass"
 keywords = ["django", "backend", "student", "planner", "app", "compass"]
 
 [tool.poetry.dependencies]
