--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,74 +1,74 @@
 aniso8601==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
 asgiref==3.7.2 ; python_version >= "3.9" and python_version < "4.0"
-attrs==23.1.0 ; python_version >= "3.9" and python_version < "4.0"
-beautifulsoup4==4.12.2 ; python_version >= "3.9" and python_version < "4.0"
+attrs==23.2.0 ; python_version >= "3.9" and python_version < "4.0"
+beautifulsoup4==4.12.3 ; python_version >= "3.9" and python_version < "4.0"
 bs4==0.0.1 ; python_version >= "3.9" and python_version < "4.0"
 build==1.0.3 ; python_version >= "3.9" and python_version < "4.0"
 cachecontrol[filecache]==0.13.1 ; python_version >= "3.9" and python_version < "4.0"
 certifi==2023.11.17 ; python_version >= "3.9" and python_version < "4.0"
-cffi==1.16.0 ; python_version >= "3.9" and python_version < "4.0" and (os_name == "nt" or sys_platform == "darwin" or sys_platform == "linux") and (implementation_name != "pypy" or sys_platform == "darwin" or sys_platform == "linux")
+cffi==1.16.0 ; python_version >= "3.9" and python_version < "4.0" and (os_name == "nt" or sys_platform == "darwin") and (implementation_name != "pypy" or sys_platform == "darwin") or python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 cfgv==3.4.0 ; python_version >= "3.9" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
 cleo==2.1.0 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (os_name == "nt" or platform_system == "Windows")
 crashtest==0.4.1 ; python_version >= "3.9" and python_version < "4.0"
-cryptography==41.0.7 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
+cryptography==42.0.3 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
 distlib==0.3.8 ; python_version >= "3.9" and python_version < "4.0"
 dj-database-url==2.1.0 ; python_version >= "3.9" and python_version < "4.0"
 django-cors-headers==4.3.1 ; python_version >= "3.9" and python_version < "4.0"
 django-heroku==0.3.1 ; python_version >= "3.9" and python_version < "4.0"
-django==4.2.8 ; python_version >= "3.9" and python_version < "4.0"
+django==4.2.10 ; python_version >= "3.9" and python_version < "4.0"
 djangorestframework==3.14.0 ; python_version >= "3.9" and python_version < "4.0"
 dulwich==0.21.7 ; python_version >= "3.9" and python_version < "4.0"
 exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
-fastjsonschema==2.19.0 ; python_version >= "3.9" and python_version < "4.0"
+fastjsonschema==2.19.1 ; python_version >= "3.9" and python_version < "4.0"
 filelock==3.13.1 ; python_version >= "3.9" and python_version < "4.0"
 gunicorn==21.2.0 ; python_version >= "3.9" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
-identify==2.5.33 ; python_version >= "3.9" and python_version < "4.0"
+identify==2.5.35 ; python_version >= "3.9" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.9" and python_version < "4.0"
-importlib-metadata==7.0.0 ; python_version >= "3.9" and python_version < "3.12"
+importlib-metadata==7.0.1 ; python_version >= "3.9" and python_version < "3.12"
 installer==0.7.0 ; python_version >= "3.9" and python_version < "4.0"
-jaraco-classes==3.3.0 ; python_version >= "3.9" and python_version < "4.0"
+jaraco-classes==3.3.1 ; python_version >= "3.9" and python_version < "4.0"
 jeepney==0.8.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
 keyring==24.3.0 ; python_version >= "3.9" and python_version < "4.0"
-lxml==4.9.3 ; python_version >= "3.9" and python_version < "4.0"
-more-itertools==10.1.0 ; python_version >= "3.9" and python_version < "4.0"
+lxml==4.9.4 ; python_version >= "3.9" and python_version < "4.0"
+more-itertools==10.2.0 ; python_version >= "3.9" and python_version < "4.0"
 msgpack==1.0.7 ; python_version >= "3.9" and python_version < "4.0"
 nodeenv==1.8.0 ; python_version >= "3.9" and python_version < "4.0"
-numpy==1.26.2 ; python_version >= "3.9" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.9" and python_version < "4.0"
 outcome==1.3.0.post0 ; python_version >= "3.9" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.9" and python_version < "4.0"
-pandas==2.1.4 ; python_version >= "3.9" and python_version < "4.0"
+pandas==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
 pexpect==4.9.0 ; python_version >= "3.9" and python_version < "4.0"
 pkginfo==1.9.6 ; python_version >= "3.9" and python_version < "4.0"
 platformdirs==3.11.0 ; python_version >= "3.9" and python_version < "4.0"
 poetry-core==1.8.1 ; python_version >= "3.9" and python_version < "4.0"
 poetry-plugin-export==1.6.0 ; python_version >= "3.9" and python_version < "4.0"
 poetry==1.7.1 ; python_version >= "3.9" and python_version < "4.0"
-pre-commit==3.6.0 ; python_version >= "3.9" and python_version < "4.0"
+pre-commit==3.6.2 ; python_version >= "3.9" and python_version < "4.0"
 promise==2.3 ; python_version >= "3.9" and python_version < "4.0"
 psycopg2-binary==2.9.9 ; python_version >= "3.9" and python_version < "4.0"
-psycopg2-pool==1.1 ; python_version >= "3.9" and python_version < "4.0"
+psycopg2-pool==1.2 ; python_version >= "3.9" and python_version < "4.0"
 psycopg2==2.9.9 ; python_version >= "3.9" and python_version < "4.0"
 ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "4.0"
-pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0" and (os_name == "nt" or sys_platform == "darwin" or sys_platform == "linux") and (implementation_name != "pypy" or sys_platform == "darwin" or sys_platform == "linux")
-pydeps==1.12.17 ; python_version >= "3.9" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0" and (os_name == "nt" or sys_platform == "darwin") and (implementation_name != "pypy" or sys_platform == "darwin") or python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux" and platform_python_implementation != "PyPy"
+pydeps==1.12.18 ; python_version >= "3.9" and python_version < "4.0"
 pyproject-hooks==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 pysocks==1.7.1 ; python_version >= "3.9" and python_version < "4.0"
 python-cas==1.6.0 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
-python-dotenv==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
-pytz==2023.3.post1 ; python_version >= "3.9" and python_version < "4.0"
+python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
+pytz==2023.4 ; python_version >= "3.9" and python_version < "4.0"
 pywin32-ctypes==0.2.2 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
 pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
-rapidfuzz==3.5.2 ; python_version >= "3.9" and python_version < "4.0"
+rapidfuzz==3.6.1 ; python_version >= "3.9" and python_version < "4.0"
 requests-toolbelt==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
-ruff==0.1.7 ; python_version >= "3.9" and python_version < "4.0"
+ruff==0.1.15 ; python_version >= "3.9" and python_version < "4.0"
 secretstorage==3.3.3 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
-selenium==4.16.0 ; python_version >= "3.9" and python_version < "4.0"
-setuptools==69.0.2 ; python_version >= "3.9" and python_version < "4.0"
+selenium==4.18.1 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==69.1.0 ; python_version >= "3.9" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.9" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -79,15 +79,15 @@ stdlib-list==0.9.0 ; python_version >= "3.9" and python_version < "4.0"
 terminaltables==3.1.10 ; python_version >= "3.9" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
 tomlkit==0.12.3 ; python_version >= "3.9" and python_version < "4.0"
-tqdm==4.66.1 ; python_version >= "3.9" and python_version < "4.0"
+tqdm==4.66.2 ; python_version >= "3.9" and python_version < "4.0"
 trio-websocket==0.11.1 ; python_version >= "3.9" and python_version < "4.0"
-trio==0.23.1 ; python_version >= "3.9" and python_version < "4.0"
-trove-classifiers==2023.11.29 ; python_version >= "3.9" and python_version < "4.0"
+trio==0.24.0 ; python_version >= "3.9" and python_version < "4.0"
+trove-classifiers==2024.1.31 ; python_version >= "3.9" and python_version < "4.0"
 typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "4.0"
-tzdata==2023.3 ; python_version >= "3.9" and python_version < "4.0"
+tzdata==2023.4 ; python_version >= "3.9" and python_version < "4.0"
 ujson==5.9.0 ; python_version >= "3.9" and python_version < "4.0"
-urllib3==2.1.0 ; python_version >= "3.9" and python_version < "4.0"
-urllib3[socks]==2.1.0 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==2.2.1 ; python_version >= "3.9" and python_version < "4.0"
+urllib3[socks]==2.2.1 ; python_version >= "3.9" and python_version < "4.0"
 virtualenv==20.25.0 ; python_version >= "3.9" and python_version < "4.0"
 webdriver-manager==4.0.1 ; python_version >= "3.9" and python_version < "4.0"
 whitenoise==6.6.0 ; python_version >= "3.9" and python_version < "4.0"
