--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "next": "^14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-window": "^1.8.10",
+    "react-virtuoso": "^4.7.4",
     "sass": "^1.72.0",
     "typescript": "5.4.3",
     "typescript-lru-cache": "^2.0.0",
