--- a/backend/majors/PHY.yaml
+++ b/backend/majors/PHY.yaml
@@ -8,20 +8,18 @@ urls:
 - https://phy.princeton.edu/
 contacts:
 - type: Chair
-  name: Herman L. Verlinde
-  email: verlinde@princeton.edu
-- type: Director of Undergraduate Studies
-  name: William Jones
-  email: wcjones@princeton.edu
+  name: James D. Olsen
+  email: jolsen@princeton.edu
 req_list:
 - name: Prerequisites
   max_counted: 1
   min_needed: ALL
   explanation: |-
-    Prerequisites for concentration in physics are the following five courses: PHY 103-104, PHY 205, and MAT 203-204. These five courses should be completed by the end of sophomore year. PHY 103 may be replaced by ISC 231-232 (the first term of Integrated Science Sequence), or EGR 191-192 (Engineering-Math-Physics), or PHY 105. PHY 104 may be replaced by ISC 233-234 or PHY 106. PHY 205 may be replaced by PHY 207. MAT 203 may be replaced by MAT 201 or MAT 218. MAT 204 may be replaced by MAT 202 or MAT 217. Prerequisites for concentration in physics cannot be taken on a pass/D/fail basis.
-
-    It is possible to concentrate in physics starting with 100-level physics courses in sophomore year. Interested students should meet with the departmental representative as early as possible.
+    Prerequisites for a major in physics are the following five courses: PHY 103-104, PHY 207, and MAT 203-204. These five courses should be completed by the end of sophomore year. 
+    
+    PHY 103 may be replaced by ISC 231-232 (the first term of Integrated Science Sequence) or PHY 105. PHY 104 may be replaced by ISC 233-234 or PHY 106. The PHY 109/110 (spring/summer) sequence is fully equivalent to PHY 104. Students with a particular interest in formal mathematics may instead satisfy the MAT 203-204 prerequisite with either the MAT 215-217 or the MAT 216-218 sequence. Prerequisites for majoring in physics cannot be taken on a pass/D/fail basis.
   completed_by_semester: 4
+  pdfs_allowed: 0
   req_list:
   - name: Physics
     max_counted: 1
@@ -51,13 +49,6 @@ req_list:
         course_list:
         - ISC 231
         - ISC 232
-      - name:
-        max_counted: 1
-        min_needed: ALL
-        explanation:
-        course_list:
-        - EGR 191
-        - EGR 192
     - name:
       max_counted: 1
       min_needed: 1
@@ -77,19 +68,24 @@ req_list:
         course_list:
         - ISC 233
         - ISC 234
+      - name:
+        max_counted: 1
+        min_needed: 2
+        course_list:
+        - PHY 109
+        - PHY 110
     - name:
       max_counted: 1
       min_needed: 1
       explanation:
       course_list:
       - PHY 207
-      - PHY 205
   - name: Math
     max_counted: 1
     min_needed: ALL
-    explanation: 'Prerequisites for concentration in physics are the following five
-      courses: PHY 103-104, PHY 205, and MAT 203-204. MAT 203 may be replaced by MAT
-      201 or MAT 218. MAT 204 may be replaced by MAT 202 or MAT 217.'
+    explanation: |-
+      MAT 203 may be replaced by MAT 201 or MAT 218. MAT 204 may be 
+      replaced by MAT 202 or MAT 217.
     req_list:
     - name:
       max_counted: 1
@@ -116,27 +112,29 @@ req_list:
   - name: Quantum Mechanics
     max_counted: 1
     min_needed: ALL
-    explanation: 'One semester of quantum mechanics: PHY 208.'
+    explanation: |-
+      One semester of quantum mechanics: PHY 208.
     course_list:
     - PHY 208
   - name: Thermodynamics and Statistical Mechanics
     max_counted: 1
     min_needed: ALL
-    explanation: 'One semester of thermodynamics and statistical mechanics: PHY 301.'
+    explanation: |-
+      One semester of thermodynamics and statistical mechanics: PHY 301.
     course_list:
     - PHY 301
   - name: Experimental Physics
     max_counted: 1
     min_needed: ALL
-    explanation: 'One semester of experimental physics: PHY 312.'
+    explanation: |-
+      One semester of experimental physics: PHY 312.
     course_list:
     - PHY 312
   - name: Complex Analysis
     max_counted: 1
     min_needed: 1
-    explanation: 'One course either on complex analysis or on differential equations
-      at the 300-level or higher: APC 350, MAE 305, MAE 306, MAT 330, MAT 335, or
-      MAT 427.'
+    explanation: |-
+      One course either on complex analysis or on differential equations at the 300-level or higher: APC 350, MAE 305, MAE 306, MAT 330, MAT 335, or MAT 427.
     course_list:
     - APC 350
     - MAE 305
@@ -209,18 +207,16 @@ req_list:
     - MSE 4*
     - MSE 5*
 - name: Independent Work
-  max_counted:
-  min_needed:
+  max_counted: 1
+  min_needed: 1
   explanation: |-
-    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so TigerPath does not check it.</i>
+    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
 
     In addition to the coursework carried out during the junior year, the student is required to complete two junior papers, each of which is on a research topic of current interest. The purpose of the papers is to give students exposure to how physics research is actually performed by immersing them in journal, as opposed to textbook, literature. Each paper is written in close consultation with a faculty adviser, who is typically performing research in the subject area of the paper. A junior paper may serve as a preliminary investigation of a senior thesis topic. Junior independent work may also be satisfied with a short experimental project.
-  no_req:
 - name: Senior Thesis
-  min_needed:
-  max_counted:
+  min_needed: 1
+  max_counted: 1
   explanation: |-
-    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so TigerPath does not check it.</i>
+    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
 
     In the senior year, in addition to coursework, students write a senior thesis based on their own research. The topic might be chosen from one of the active experimental or theoretical research fields of the Physics Department, or might be suggested by a faculty member with some subsidiary interest. A student could also choose a topic relating physics and another field, such as biophysics, geophysics, the teaching of physics, history of science, or engineering physics. Students whose main adviser is outside the Physics Department must also have a co-adviser who is a faculty member in the Physics Department.
-  no_req:
