--- a/backend/majors/MOL.yaml
+++ b/backend/majors/MOL.yaml
@@ -14,199 +14,214 @@ contacts:
   name: Elizabeth R. Gavis
   email: gavis@princeton.edu
 req_list:
-- name: Prerequisites
+- name: Prerequisites & General Requirements
   max_counted: 1
-  min_needed: 3
-  explanation: To enter the Department of Molecular Biology, students must have completed
-    MOL 214 with a grade of C or better. CHM 201/207 and 202, or one unit of chemistry
-    AP credit and CHM 202 or 215, or two units of chemistry AP credit, are also required
-    to enter the department. An alternate path into the department is through the
-    integrated science curriculum
+  min_needed: 1
+  explanation: Students can take the standard path through the 
+    prerequisites and science requirements, or they can take the 
+    integrated science curriculum. ISC 231-234 (a full-year, 
+    double-credit course) can be taken in the first year and substitutes 
+    for MOL 214, CHM 201 and 202, COS 126, and PHY 103 and 104. Students 
+    cannot receive credit for both an ISC course and its alternative.
   req_list:
-  - name:
-    max_counted: 3
-    min_needed:
-    explanation: Regular track
-    req_list:
-    - name:
-      max_counted: 1
-      min_needed: 1
-      explanation: CHM 201 or 207
-      course_list:
-      - CHM 201
-      - CHM 207
-    - name:
-      max_counted: 1
-      min_needed: 1
-      explanation: CHM 202 or 215
-      course_list:
-      - CHM 202
-      - CHM 215
-    - name:
-      max_counted: 1
-      min_needed: 1
-      explanation: MOL 214
-      course_list:
-      - MOL 214
-  - name:
-    max_counted: 3
-    min_needed:
-    explanation: ISC track
-    course_list:
-    - ISC 231
-    - ISC 232
-    - ISC 233
-    - ISC 234
-- name: General Requirements
-  max_counted: 1
-  min_needed: ALL
-  req_list:
-  - name: Organic Chemistry
-    max_counted: 1
-    min_needed: 1
-    explanation: CHM 301 and 302/304, or CHM 337. Courses taken at other institutions
-      can be used toward fulfillment of the chemistry requirements with prior approval
-      from the Department of Chemistry. The organic chemistry requirement must be
-      completed before the beginning of the junior year.
-    completed_by_semester: 4
-    req_list:
-    - name:
-      max_counted: 1
-      min_needed: ALL
-      explanation: ''
-      completed_by_semester: 4
-      req_list:
-      - name:
-        max_counted: 1
-        min_needed: 1
-        explanation: ''
-        completed_by_semester: 4
-        course_list:
-        - CHM 301
-        - CHM 303
-      - name:
-        max_counted: 1
-        min_needed: 1
-        explanation: ''
-        completed_by_semester: 4
-        course_list:
-        - CHM 302
-        - CHM 304
-        - CHM 304B
-    - name:
-      max_counted: 1
-      min_needed: 1
-      explanation: ''
-      completed_by_semester: 4
-      course_list:
-      - CHM 337
-  - name: Quantitative
+  - name: Standard Path
     max_counted: 1
     min_needed: ALL
-    explanation: Students satisfy the quantitative requirement by taking one course
-      in statistics (SML 201, ORF 245, or MOL 290) and one course in either computer
-      science (COS 126 or above) or math (MAT 103, 104, 175, 192, or any 200-level
-      MAT course). SML 201 and COS 126 are the recommended choices for most students.
-      AP credit cannot be used toward the fulfillment of the quantitative requirement.
-      Courses taken at other institutions can be substituted for the second required
-      course (but not for the statistics course), if approved by the corresponding
-      department.
+    explanation: Standard path through the prerequisites and science
+      requirements.
     req_list:
-    - name: Statistics
+    - name: Prerequisites
       max_counted: 1
-      min_needed: 1
-      explanation: ''
-      course_list:
-      - SML 201
-      - NEU 314
-      - ORF 245
-      - MOL 290
-    - name: Math or Computer Science
-      max_counted: 1
-      min_needed: 1
-      explanation: ''
+      min_needed: 2
+      explanation: |- 
+        To enter the Department of Molecular Biology, students must have completed MOL 214 with a grade of C or better. CHM 201/207 and 202 or equivalent are also required to enter the department. (For the Class of 2027 and beyond, the equivalent is AP + CHM202/215 or requirement fulfillment through the chemistry placement test.) 
+
+        An alternate path into the department is through the integrated science curriculum (see below).
       req_list:
-      - name:
+      - name: Molecular Biology
         max_counted: 1
         min_needed: 1
-        explanation: ''
         course_list:
-        - COS 126
-        - COS 2*
-        - COS 3*
-        - COS 4*
-        - COS 5*
-      - name:
+        - MOL 214
+      - name: General Chemistry
         max_counted: 1
         min_needed: 1
-        explanation: ''
+        req_list:
+        - name: Basic General Chemistry
+          max_counted: 1
+          min_needed: 2
+          course_list:
+          - CHM 201
+          - CHM 202
+        - name: Advanced General Chemistry
+          max_counted: 1
+          min_needed: 2
+          course_list:
+            - CHM 207
+            - CHM 202
+    - name: Organic Chemistry
+      max_counted: 1
+      min_needed: 1
+      explanation: CHM 301 and 304, or CHM 337. Courses taken at other 
+        institutions can be used toward fulfillment of the chemistry 
+        requirements with prior approval from the Department of 
+        Chemistry. The organic chemistry requirement must be completed 
+        before the beginning of junior year.
+      completed_by_semester: 4
+      req_list:
+      - name: Organic Chemistry Sequence
+        max_counted: 1
+        min_needed: 2
         course_list:
+        - CHM 301
+        - CHM 304
+      - name: Bioengineering Organic Chemistry
+        max_counted: 1
+        min_needed: 1
+        course_list:
+        - CHM 337
+    - name: Quantitative
+      max_counted: 1
+      min_needed: 2
+      explanation: Students satisfy the quantitative requirement by 
+        taking one course in statistics (SML 201, ORF 245, or MOL 290) 
+        and one course in either computer science (COS 126 or above) or 
+        math (MAT 103, 104, 175, 192, or any 200-level MAT course). 
+        SML 201 and COS 126 are the recommended choices for most 
+        students. AP credit cannot be used toward the fulfillment of the 
+        quantitative requirement. Courses taken at other institutions 
+        can be substituted for the second required course (but not for 
+        the statistics course), if approved by the corresponding 
+        department.
+      req_list:
+      - name: Statistics
+        max_counted: 1
+        min_needed: 1
+        course_list:
+        - SML 201
+        - ORF 245
+        - MOL 290
+      - name: CS or Mathematics
+        max_counted: 1
+        min_needed: 1
+        course_list:
+        - COS *
         - MAT 103
         - MAT 104
         - MAT 175
         - MAT 192
-        - MAT 2*
-  - name: Physics
+        - MAT 2**
+    - name: Physics
+      max_counted: 1
+      min_needed: 1
+      explanation: Physics 108 (strongly recommended), or PHY 103 and 
+        104, or PHY 101 and 102. PHY 108 is a one-semester, biologically 
+        oriented alternative to the traditional full-year sequences. 
+        Premedical students who need two semesters of physics can 
+        combine PHY 101 or 103 with PHY 108. Neither AP credit nor 
+        courses taken at other institutions can be used toward the 
+        fulfillment of the physics requirement.
+      req_list:
+      - name: Physics for Life Sciences
+        max_counted: 1
+        min_needed: 1
+        course_list:
+        - PHY 108
+      - name: General Physics
+        max_counted: 1
+        min_needed: 2
+        course_list:
+        - PHY 103
+        - PHY 104
+      - name: Introductory Physics
+        max_counted: 1
+        min_needed: 2
+        course_list:
+        - PHY 101
+        - PHY 102
+  - name: Integrated Science Curriculum
     max_counted: 1
-    min_needed: 1
-    explanation: ''
+    min_needed: ALL
+    explanation: An alternative path into the department is through the 
+      integrated science curriculum. ISC 231-234 (a full-year, 
+      double-credit course) can be taken in the first year and 
+      substitutes for MOL 214, CHM 201 and 202, COS 126, and PHY 103 
+      and 104. Students cannot receive credit for both an ISC course and 
+      its alternative. For full course descriptions and more 
+      information, see the integrated science website.
     req_list:
-    - name:
+    - name: Prerequisites
       max_counted: 1
-      min_needed: ALL
-      explanation: ''
-      course_list:
-      - PHY 101
-      - PHY 102
-    - name:
-      max_counted: 1
-      min_needed: ALL
-      explanation: ''
-      course_list:
-      - PHY 103
-      - PHY 104
-    - name:
-      max_counted: 1
-      min_needed: ALL
-      explanation: ''
-      course_list:
-      - PHY 108
-    - name:
-      max_counted: 1
-      min_needed: ALL
-      explanation: ''
-      double_counting_allowed: true
+      min_needed: 1
       course_list:
       - ISC 231
       - ISC 232
       - ISC 233
       - ISC 234
-  explanation: ''
+    - name: Organic Chemistry
+      max_counted: 1
+      min_needed: 1
+      explanation: CHM 301 and 304, or CHM 337. Courses taken at other
+        institutions can be used toward fulfillment of the chemistry
+        requirements with prior approval from the Department of
+        Chemistry. The organic chemistry requirement must be completed
+        before the beginning of junior year.
+      completed_by_semester: 4
+      req_list:
+        - name: Organic Chemistry Sequence
+          max_counted: 1
+          min_needed: 2
+          course_list:
+            - CHM 301
+            - CHM 304
+        - name: Bioengineering Organic Chemistry
+          max_counted: 1
+          min_needed: 1
+          course_list:
+            - CHM 337
+    - name: Quantitative
+      max_counted: 1
+      min_needed: 1
+      explanation: Students satisfy the quantitative requirement by 
+        taking one course in statistics (SML 201, ORF 245, or MOL 290).
+        The CS or Mathematics aspect of the quantitative requirement
+        is satisfied by the integrated science sequence.
+      course_list:
+      - SML 201
+      - ORF 245
+      - MOL 290
 - name: Departmental Core Courses
-  max_counted: 4
-  min_needed: ALL
-  explanation: 'The following core courses are required: MOL 342, MOL 345, MOL 348,
-    and MOL 350. Except under very special circumstances, these courses must be taken
-    before senior year. All four departmental core courses count toward the eight
-    required departmentals. No substitutions are allowed except in the case of study
-    abroad which, if it entails intensive research and with advanced permission, can
-    substitute for MOL 350. Note that MOL 345 may be taken concurrently with CHM 302/304.'
+  max_counted: 1
+  min_needed: 2
+  explanation: |-
+    The following core courses are required: MOL 342, MOL 345, MOL 348 and MOL 320/350. Except under very special circumstances, these courses must be taken before senior year. MOL 350 is offered in the fall to junior majors and is the conventional path for the major. MOL 320 has limited enrollment and is offered in the spring to sophomores who intend to major in MOL and plan to study abroad, or have taken/are concurrently taking MOL 348 and want an early introduction to research methods and laboratory experience. MOL 320 and MOL 350 are considered equivalent courses and only one can be taken.
+
+    All four departmental core courses count toward the eight required departmentals. No substitutions are allowed except in the case of study abroad which, if it entails intensive research and with advanced permission, can substitute for MOL 350.
   completed_by_semester: 6
-  course_list:
-  - MOL 342
-  - MOL 345
-  - MOL 348
-  - MOL 350
+  req_list:
+  - name: Genetics, Biochemistry, Cells
+    max_counted: 1
+    min_needed: 3
+    course_list:
+      - MOL 342
+      - MOL 345
+      - MOL 348
+  - name: Molecular Biology Lab
+    max_counted: 1
+    min_needed: 1
+    course_list:
+    - MOL 320
+    - MOL 350
 - name: Other Departmentals
   max_counted: 1
-  min_needed: 8
-  explanation: All students must take a total of at least eight departmentals. In
-    addition to the four departmental core courses, students must take at least one
-    300, 400, or 500-level course with MOL as the primary listing. The remaining three
-    departmentals can be chosen from among all 300-or-higher-level MOL, MOL-crosslisted,
-    or other approved courses (see list on department website). Note that CHM 301,
-    CHM 302/304, and CHM 337 qualify as departmentals. Only courses taken at Princeton
-    count as departmentals; there are no exceptions to this rule.
+  min_needed: 3
+  explanation: |-
+    <i>Editor's Note: If a student took CHM 301 and 304, they only need to take 2 more departmentals, not 3.</i>
+    
+    All students must take a total of at least eight departmentals. In addition to the four departmental core courses, students must take at least one 300-, 400-, or 500-level course with MOL as the primary listing. The remaining three departmentals can be chosen from among all 300-or-higher-level MOL, MOL-cross-listed, or other approved courses (see list on department website). Note that CHM 301, CHM 304 and CHM 337 qualify as departmentals. Only courses taken at Princeton count as departmentals; there are no exceptions to this rule.
+
+    Any course that is a prerequisite, requirement or departmental must be taken for a letter grade (no pass/D/fail). The sole exception is that, at the point of declaring the MOL major, students may appeal to "uncover" a single P grade in order to meet a prerequisite or requirement for entry. See the Office of the Dean of the College's policy on appealing to rescind a P grade.
+  pdfs_allowed: 0
   double_counting_allowed: true
   course_list:
   - CBE 419
@@ -214,12 +229,9 @@ req_list:
   - CBE 439
   - CBE 440
   - CBE 447
-  - CHM 301
   - CHM 302
   - CHM 303
-  - CHM 304
   - CHM 304B
-  - CHM 337
   - CHM 403
   - CHM 440
   - CHM 515
@@ -238,21 +250,17 @@ req_list:
   - NEU 501*
   - PHY 412
   - QCB 408
-- name: Independent Work
-  max_counted:
-  min_needed:
+- name: Junior Independent Work
+  max_counted: 1
+  min_needed: 1
   explanation: |-
-    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so TigerPath does not check it.</i>
+    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
 
     In the fall semester of the junior year students participate in tutorials in which they read papers from the original literature and prepare two short papers on assigned topics. In the spring semester, students carry out independent work with a faculty adviser with whom they will eventually do their senior thesis research, culminating in a paper in the form of a grant proposal.
-  description: Independent Work
-  no_req:
-- name: Senior Thesis
-  min_needed:
+- name: Senior Independent work
   explanation: |-
-    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so TigerPath does not check it.</i>
+    <i>Editor's Note: Concentrators of this major do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
 
     During the senior year each student, with the guidance of a faculty adviser, undertakes a major research effort. This research project can be a laboratory or non-laboratory-based study that will be written and presented as a senior thesis.
-  max_counted:
-  description: Senior Thesis
-  no_req:
+  max_counted: 1
+  min_needed: 1
